Fix 2nd level header. Including Tag selector card

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -1,28 +1,43 @@
 <div fxLayout="column" fxLayoutAlign="start start">
-  <div id="secondary-header" class="col-12">
-    <div id="section-name-container" class="col-12 col-sm-6">
-      <h1 class="section-name">{{sectionName}}</h1>
+  <!-- HEADER -->
+  <div id="secondary-header" fxLayout="row wrap">
+    <!-- TITLE -->
+    <div id="section-name-container">
+      <h1 class="section-name">{{ sectionName }}</h1>
     </div>
-    <div id="tags-outer-container" class="col-12 col-sm-6">
+    <!-- /TITLE -->
+    <div id="tags-outer-container" class="mat-accent-500-bg">
       <h3 translate id="tags-title">TAG_SELECTOR</h3>
-      <!--TODO: translate this-->
+      <!-- TODO: translate this -->
       <div style="width: 100%">
-        <ng-select [items]="globalTags$ | async" [hideSelected]="true" bindLabel='name' [closeOnSelect]="false"
-          [multiple]="true" bindValue="id" [placeholder]="'Filter by Tags'" [searchFn]="tagSelectFilter" (change)="tagSelectionChanged($event)"
-          [(ngModel)]="selectedItems" style=" background-color: #fff !important; width: 40%; min-height: 38px !important;"></ng-select>
+        <ng-select
+          class="custom"
+          [items]="globalTags$ | async"
+          [hideSelected]="true"
+          bindLabel="name"
+          [closeOnSelect]="false"
+          [multiple]="true"
+          bindValue="id"
+          [placeholder]="'Filter by Tags'"
+          [searchFn]="tagSelectFilter"
+          (change)="tagSelectionChanged($event)"
+          [(ngModel)]="selectedItems"
+        ></ng-select>
       </div>
     </div>
   </div>
-
-
-
+  <!-- / HEADER -->
 
   <article fxFlexFill class="row">
     <section id="main-article-summary-container">
-      <ant-article-summary [isCuriosityHomeArticle]=true [article]="mostImportantArticle" class="col-md-3 col-xs-12"></ant-article-summary>
+      <ant-article-summary
+        [isCuriosityHomeArticle]="true"
+        [article]="mostImportantArticle"
+        class="col-md-3 col-xs-12"
+      ></ant-article-summary>
     </section>
     <section id="marketing-container" class="col-12">
-        <slideshow
+      <slideshow
         [minHeight]="'300px'"
         [autoPlay]="true"
         [imageUrls]="imageUrls"
@@ -36,15 +51,30 @@
       </slideshow>
     </section>
     <section id="sencond-most-important-article-summary-container">
-      <ant-article-summary *ngFor="let article of secondMostImporatantArticles" [article]="article" class="col-md-6 col-xs-12"></ant-article-summary>
+      <ant-article-summary
+        *ngFor="let article of secondMostImporatantArticles"
+        [article]="article"
+        class="col-md-6 col-xs-12"
+      ></ant-article-summary>
     </section>
     <section id="articles-summary-container">
-      <ant-article-summary *ngFor="let article of articlesToRender" [article]="article" class="col-md-3 col-xs-12"></ant-article-summary>
+      <ant-article-summary
+        *ngFor="let article of articlesToRender"
+        [article]="article"
+        class="col-md-3 col-xs-12"
+      ></ant-article-summary>
     </section>
   </article>
-<div id="more-articles-btn-container" [ngClass]="{'hide-more-btn': isEndOfPage}">
-  <button class="btn" (click)="loadMoreArticles()" translate="">SEE_MORE</button>
-</div>
+  <div
+    id="more-articles-btn-container"
+    [ngClass]="{ 'hide-more-btn': isEndOfPage }"
+  >
+    <button class="btn" (click)="loadMoreArticles()" translate="">
+      SEE_MORE
+    </button>
+  </div>
 
-<!-- <hav-outstanding-experiences></hav-outstanding-experiences> TODo: use this compoenent, but can't be imported in this module and the homeModule... -->
+  <!--
+    <hav-outstanding-experiences></hav-outstanding-experiences> TODo: use this compoenent, but can't be imported in this module and the homeModule...
+  -->
 </div>
