Fix dots positioning on Home top articles

--- a/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
+++ b/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
@@ -33,9 +33,10 @@
     margin-top: 0;
     margin-bottom: 2rem;
     position: absolute;
-    top: 65%;
-    right: 39%;
-    background: #0404042e;
+    top: 58%;
+    right: 0%;
+    left: 0;
+    // background: #0404042e;
   }
 }
 
