Fix impact section on home for various sizes

--- a/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.html
@@ -2,6 +2,7 @@
   class="feature-section__padded impact-section"
   fxLayout="row"
   fxLayout.xs="column"
+  fxLayout.sm="column"
 >
   <div class="impact-presentation">
     <div fxFlexAlign="center" [routerLink]="'/section/impacto'">
