--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
@@ -1,11 +1,16 @@
-<section class="metadata-panel">
+<section class="metadata-panel" fxLayout="row" fxLayoutAlign="end center">
   <!--
     <span class="metadata-text" translate [translateParams]="{value: article?.createdBy}">BY</span>
 
     <mat-divider class="metadata-separator" vertical></mat-divider>
   -->
 
-  <div fxShow.xs fxLayout="row" class="metadata-item" fxLayoutAlign="right center">
+  <div
+    fxShow.xs
+    fxLayout="row"
+    class="metadata-item"
+    fxLayoutAlign="right center"
+  >
     <mat-icon class="metadata-icon" aria-label="created-date"
       >watch_later</mat-icon
     >
@@ -13,17 +18,17 @@
   </div>
 
   <!--
-    <mat-divider fxLayout="row" class="metadata-item" class="right-separator" vertical></mat-divider>
+    <mat-divider fxLayout="row" class="right-separator" vertical></mat-divider>
   -->
 
-  <div fxLayout="row" class="metadata-item" fxLayoutAlign="right center">
+  <div fxLayout="row" fxLayoutAlign="right center" class="metadata-item">
     <mat-icon class="metadata-icon" aria-label="views">visibility</mat-icon>
     <span class="metadata-text">{{ article?.views }}</span>
   </div>
 
   <!-- <mat-divider class="metadata-separator" vertical></mat-divider> -->
 
-  <div fxLayout="row" class="metadata-item" fxLayoutAlign="right center">
+  <div fxLayout="row" fxLayoutAlign="right center" class="metadata-item">
     <mat-icon class="metadata-icon" aria-label="comments">comment</mat-icon>
     <span class="metadata-text">{{ article?.approvedCommentCount }}</span>
   </div>
