--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
@@ -8,7 +8,7 @@
 }
 
 .metadata-panel {
-  padding: 0 2rem;
+  // padding: 0 2rem;
   min-height: 5rem;
   width: 100%;
   font-size: 0.8em;
@@ -25,7 +25,6 @@
   font-size: 1.4em;
 }
 
-.metadata-item{
-  float: right;
-  margin-left: 10px;
+.metadata-item {
+  margin-right: 1.3rem;
 }
