--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -49,9 +49,17 @@
       <h4 *ngIf="isTitleVisible" class="article-summary-title">
         {{ article?.title }}
       </h4>
-      <h5 *ngIf="isAuthorVisible" class="article-author">
-        POR: {{ article?.createdBy | uppercase }}
-      </h5>
+      <div *ngIf="isAuthorVisible" class="article-author">
+        <h5
+          translate
+          [translateParams]="{
+            value: article?.createdBy
+          }"
+        >
+          BY
+        </h5>
+      </div>
+
       <p *ngIf="isTextVisible" class="article-summary-body">
         {{ article?.body }}
       </p>
