--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -7,6 +7,14 @@ $tags-container-color: #2aaae2;
   overflow: hidden;
 }
 
+.no-articles-message {
+  text-align: center;
+}
+
+.main-article-summary-container {
+  padding-bottom: 6rem;
+}
+
 #secondary-header {
   margin-top: 5.5rem;
 
