--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -19,10 +19,14 @@ $tags-container-color: #2aaae2;
   margin-top: 5.5rem;
 
   width: 100%;
-  margin-bottom: 130px !important;
+  margin-bottom: 130px;
   box-sizing: border-box;
   position: relative;
   justify-content: flex-end;
+
+  @include media-breakpoint-down('sm') {
+    margin-bottom: 0;
+  }
 
   #section-name-container {
     align-self: flex-end;
@@ -33,6 +37,17 @@ $tags-container-color: #2aaae2;
       padding-bottom: 0;
       padding-right: 6rem;
       margin-bottom: 0 !important;
+    }
+
+    @include media-breakpoint-down('sm') {
+      align-self: center;
+
+      .section-name {
+        padding-right: 0rem;
+        padding: 0;
+        font-size: 4.7em;
+        word-break: break-all;
+      }
     }
   }
 
@@ -54,10 +69,15 @@ $tags-container-color: #2aaae2;
       font-size: 3.4em;
       text-transform: uppercase;
       max-width: 340px;
+    }
 
-      @include media-breakpoint-down('sm') {
-        font-size: 2.25em;
-        text-align: center;
+    @include media-breakpoint-down('sm') {
+      max-width: 100%;
+      padding-left: 15%;
+      #tags-title {
+        font-size: 2.5em;
+        max-width: 50%;
+        text-align: left;
       }
     }
   }
