--- a/apps/havana500-admin/src/app/features/marketing/smart/marketing-home.component.scss
+++ b/apps/havana500-admin/src/app/features/marketing/smart/marketing-home.component.scss
@@ -35,6 +35,11 @@
       min-height: 64px;
     }
 
+    .preview-image {
+      height: 5rem;
+      width: auto;
+    }
+
     .article {
       position: relative;
       cursor: pointer;
